--- a/.github/workflows/promptflow-parallel-e2e-test.yml
+++ b/.github/workflows/promptflow-parallel-e2e-test.yml
@@ -55,10 +55,11 @@ jobs:
       - name: run e2e tests
         run: poetry run pytest -m e2etest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml
         working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name: upload coverage report
-        uses: actions/upload-artifact@v4
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
-          name: report-${{ matrix.os }}-py${{ matrix.python-version }}
+          name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
           path: |
             ${{ env.WORKING_DIRECTORY }}/*.xml
             ${{ env.WORKING_DIRECTORY }}/htmlcov/
