--- a/.github/workflows/promptflow-parallel-unit-test.yml
+++ b/.github/workflows/promptflow-parallel-unit-test.yml
@@ -12,26 +12,16 @@ on:
       - .github/workflows/promptflow-parallel-unit-test.yml
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   IS_IN_CI_PIPELINE: "true"
   WORKING_DIRECTORY: ${{ github.workspace }}/src/promptflow-parallel
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: snok/install-poetry@v1
-    - name: build
-      run: poetry build
-      working-directory: ${{ env.WORKING_DIRECTORY }}
-    - uses: actions/upload-artifact@v4
-      with:
-        name: promptflow-parallel
-        path: ${{ env.WORKING_DIRECTORY }}/dist/promptflow_parallel-*.whl
-
   test:
-    needs: build
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-13]
@@ -41,33 +31,26 @@ jobs:
     defaults:
       run:
         shell: bash
+    environment:
+      internal
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - name: set test mode
+        # Always run in replay mode for now until we figure out the test resource to run live mode
+        run: echo "PROMPT_FLOW_TEST_MODE=replay" >> $GITHUB_ENV
+        #run: echo "PROMPT_FLOW_TEST_MODE=$(if [[ "${{ github.event_name }}" == "pull_request" ]]; then echo replay; else echo live; fi)" >> $GITHUB_ENV
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - uses: snok/install-poetry@v1
-      - uses: actions/download-artifact@v4
-        with:
-          name: promptflow-parallel
-          path: ${{ env.WORKING_DIRECTORY }}
       - name: install promptflow packages in editable mode
         run: |
-          poetry run pip install -e ../promptflow
-          poetry run pip install -e ../promptflow-core
-          poetry run pip install -e ../promptflow-tracing
-          poetry run pip install -e ../promptflow-tools
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name: install promptflow-parallel from wheel
-        # wildcard expansion (*) does not work in Windows, so leverage python to find and install
-        run: poetry run pip install --pre $(python -c "import glob; print(glob.glob('promptflow_parallel-*.whl')[0])")
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name: install test dependency group
-        run: poetry install --only test
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name: install recording
-        run: poetry run pip install -e ../promptflow-recording
+          set -xe
+          poetry install --with ci,test
+
+          poetry run pip show promptflow-tracing
+          poetry run pip show promptflow-core
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: run unit tests
         run: poetry run pytest -m unittest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml
@@ -76,7 +59,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
+          name: Test Results (Python ${{ matrix.python-version }}) (OS ${{ matrix.os }})
           path: |
             ${{ env.WORKING_DIRECTORY }}/*.xml
             ${{ env.WORKING_DIRECTORY }}/htmlcov/
@@ -89,21 +72,16 @@ jobs:
       pull-requests: write
       contents: read
       issues: read
+    if: always()
     steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-      - uses: EnricoMi/publish-unit-test-result-action@v2
-        with:
-          check_name: promptflow-parallel test result
-          comment_title: promptflow-parallel test result
-          files: "artifacts/**/test-results.xml"  # align with `--junit-xml` in pyproject.toml
-      - uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: "artifacts/report-ubuntu-latest-py3.9/coverage.xml"
-          badge: true
-          fail_below_min: false
-          format: markdown
-          hide_complexity: true
-          output: both
-          thresholds: 40 60
+    - name: checkout
+      uses: actions/checkout@v4
+    - name: Publish Test Results
+      uses: "./.github/actions/step_publish_test_results"
+      with:
+        testActionFileName: promptflow-parallel-unit-test.yml
+        testResultTitle: Parallel Unit Test Result
+        osVersion: ubuntu-latest
+        pythonVersion: 3.9
+        coverageThreshold: 40
+        context: test/parallel-unit
