--- a/src/promptflow-tools/promptflow/tools/yamls/llm_vision.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/llm_vision.yaml
@@ -47,6 +47,7 @@ promptflow.tools.llm_vision.llm_vision:
       enum:
       - gpt-4-turbo
       - gpt-4-vision-preview
+      - gpt-4o
       - gpt-4-turbo-2024-04-09
       - gpt-4-1106-vision-preview
       allow_manual_entry: true
