--- a/src/promptflow/tests/test_configs/eager_flows/basic_callable_class_with_sample_file/flow.flex.yaml
+++ b/src/promptflow/tests/test_configs/eager_flows/basic_callable_class_with_sample_file/flow.flex.yaml
@@ -1,4 +1,5 @@
 entry: simple_callable_class:MyFlow
-sample: file:./inputs.json
+sample:
+  inputs: ${file:./inputs.json}
 environment:
   image: promptflow.azurecr.io/promptflow-runtime:bu-20240403-1452
