move executor tests to core

--- a/src/promptflow/tests/test_configs/flows/async_tools/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/async_tools/flow.dag.yaml
@@ -3,7 +3,7 @@ inputs:
     type: string
     default: Hello
 outputs:
-  ouput1:
+  output1:
     type: string
     reference: ${async_passthrough1.output}
   output2:
