--- a/examples/flex-flows/basic/flow.flex.yaml
+++ b/examples/flex-flows/basic/flow.flex.yaml
@@ -1,6 +1,7 @@
-$schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json
+$schema: https://azuremlschemas.azureedge.net/promptflow/latest/flow.schema.json
 entry: programmer:write_simple_program
 environment:
-  # image: mcr.microsoft.com/azureml/promptflow/promptflow-python
   python_requirements_txt: requirements.txt
-
+sample:
+  inputs:
+    text: Java Hello World!
