--- a/examples/flex-flows/basic/run.yml
+++ b/examples/flex-flows/basic/run.yml
@@ -3,3 +3,8 @@ flow: .
 data: data.jsonl
 column_mapping:
   text: ${data.text}
+environment_variables:
+  # environment variables from connection
+  AZURE_OPENAI_API_KEY: ${open_ai_connection.api_key}
+  AZURE_OPENAI_ENDPOINT: ${open_ai_connection.api_base}
+  AZURE_OPENAI_API_TYPE: azure
