--- a/.github/workflows/promptflow-executor-unit-test.yml
+++ b/.github/workflows/promptflow-executor-unit-test.yml
@@ -151,7 +151,7 @@ jobs:
         az account show
         pip install langchain
         python scripts/building/run_coverage_tests.py `
-          -p ${{ env.testWorkingDirectory }}/promptflow `
+          -p ${{ env.testWorkingDirectory }} `
           -t ${{ env.testWorkingDirectory }}/tests/executor/unittests `
           -l eastus `
           -m "all" `
