--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -39,12 +39,12 @@ packages = [
 # dependencies
 [tool.poetry.dependencies]
 python = "<4.0,>=3.8"
-promptflow-devkit = ">=1.11.0,<2.0.0"
-promptflow-core = ">=1.11.0,<2.0.0"
+promptflow-devkit = "<2.0.0"
+promptflow-core = "<2.0.0"
 aiohttp_retry = ">=2.8.3"
 websocket-client = ">=1.2.0"
 jsonpath_ng = ">=1.5.0"
-promptflow-azure = ">=1.11.0,<2.0.0" # Needed for remote tracking
+promptflow-azure = "<2.0.0" # Needed for remote tracking
 mlflow = "<3.0.0" # Needed for remote tracking to log metrics
 azureml-mlflow = "<2.0.0" # Needed for remote tracking to log metrics
 
