--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,8 +1,4 @@
-promptflow-tracing @ git+https://github.com/microsoft/promptflow/@clwan/sample_v1_11#subdirectory=src/promptflow-tracing
-promptflow-core @ git+https://github.com/microsoft/promptflow/@clwan/sample_v1_11#subdirectory=src/promptflow-core
-promptflow-devkit @ git+https://github.com/microsoft/promptflow/@clwan/sample_v1_11#subdirectory=src/promptflow-devkit
-promptflow-azure @ git+https://github.com/microsoft/promptflow/@clwan/sample_v1_11#subdirectory=src/promptflow-azure
-promptflow @ git+https://github.com/microsoft/promptflow/@clwan/sample_v1_11#subdirectory=src/promptflow
-promptflow-tools @ git+https://github.com/microsoft/promptflow/@clwan/sample_v1_11#subdirectory=src/promptflow-tools
+promptflow[azure]
+promptflow-tools
 python-dotenv
 bs4
