--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -47,6 +47,7 @@ jsonpath_ng = ">=1.5.0"
 promptflow-azure = "<2.0.0" # Needed for remote tracking
 mlflow = "<3.0.0" # Needed for remote tracking to log metrics
 azureml-mlflow = "<2.0.0" # Needed for remote tracking to log metrics
+jinja2 = ">=3.0,<4.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "*"
