--- a/.github/workflows/promptflow-evals-e2e-test.yml
+++ b/.github/workflows/promptflow-evals-e2e-test.yml
@@ -68,6 +68,12 @@ jobs:
         # wildcard expansion (*) does not work in Windows, so leverage python to find and install
         run: poetry run pip install --pre $(python -c "import glob; print(glob.glob('promptflow_evals-*.whl')[0])")
         working-directory: ${{ env.WORKING_DIRECTORY }}
+      - name: show dependency tree
+        run: poetry show --tree
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+      - name: debug dependencies
+        run: poetry debug resolve -v
+        working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: install test dependency group
         run: poetry install --only test
         working-directory: ${{ env.WORKING_DIRECTORY }}
