--- a/.github/workflows/promptflow-evals-e2e-test.yml
+++ b/.github/workflows/promptflow-evals-e2e-test.yml
@@ -64,10 +64,10 @@ jobs:
           poetry run pip install -e ../promptflow-azure
           poetry run pip install -e ../promptflow
         working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name: install promptflow-evals from wheel
-        # wildcard expansion (*) does not work in Windows, so leverage python to find and install
-        run: poetry run pip install --pre $(python -c "import glob; print(glob.glob('promptflow_evals-*.whl')[0])")
-        working-directory: ${{ env.WORKING_DIRECTORY }}
+      # - name: install promptflow-evals from wheel
+      #   # wildcard expansion (*) does not work in Windows, so leverage python to find and install
+      #   run: poetry run pip install --pre $(python -c "import glob; print(glob.glob('promptflow_evals-*.whl')[0])")
+      #   working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: poetry lock
         run: poetry lock
         working-directory: ${{ env.WORKING_DIRECTORY }}
