--- a/examples/flows/chat/chat-basic/flow.dag.yaml
+++ b/examples/flows/chat/chat-basic/flow.dag.yaml
@@ -1,4 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json
+environment:
+  python_requirements_txt: requirements.txt
 inputs:
   chat_history:
     type: list
@@ -13,22 +15,17 @@ outputs:
     reference: ${chat.output}
     is_chat_output: true
 nodes:
-- inputs:
-    # This is to easily switch between openai and azure openai.
-    # deployment_name is required by azure openai, model is required by openai.
-    deployment_name: gpt-35-turbo
-    model: gpt-3.5-turbo
-    max_tokens: "256"
-    temperature: "0.7"
-    chat_history: ${inputs.chat_history}
-    question: ${inputs.question}
-  name: chat
+- name: chat
   type: llm
   source:
     type: code
     path: chat.jinja2
-  api: chat
+  inputs:
+    deployment_name: gpt-35-turbo
+    model: gpt-3.5-turbo
+    max_tokens: 256
+    temperature: 0.7
+    chat_history: ${inputs.chat_history}
+    question: ${inputs.question}
   connection: open_ai_connection
-node_variants: {}
-environment:
-    python_requirements_txt: requirements.txt
+  api: chat
