--- a/examples/flows/chat/chat-with-wikipedia/flow.dag.yaml
+++ b/examples/flows/chat/chat-with-wikipedia/flow.dag.yaml
@@ -1,4 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json
+environment:
+  python_requirements_txt: requirements.txt
 inputs:
   chat_history:
     type: list
@@ -19,21 +21,18 @@ nodes:
     type: code
     path: extract_query_from_question.jinja2
   inputs:
-    # This is for easily switch between openai and azure openai.
-    # deployment_name is required by azure openai, model is required by openai.
-    deployment_name: gpt-35-turbo
-    model: gpt-3.5-turbo
-    temperature: '0.7'
-    top_p: '1.0'
-    stop: ''
-    max_tokens: '256'
-    presence_penalty: '0'
-    frequency_penalty: '0'
-    logit_bias: ''
+    deployment_name: gpt-4-8k
+    model: gpt-4
+    temperature: 0.7
+    top_p: 1
+    max_tokens: 256
+    presence_penalty: 0
+    frequency_penalty: 0
     question: ${inputs.question}
     chat_history: ${inputs.chat_history}
-  connection: open_ai_connection
+  connection: connection_name
   api: chat
+  use_variants: false
 - name: get_wiki_url
   type: python
   source:
@@ -41,7 +40,7 @@ nodes:
     path: get_wiki_url.py
   inputs:
     entity: ${extract_query_from_question.output}
-    count: '2'
+    count: 2
 - name: search_result_from_url
   type: python
   source:
@@ -49,7 +48,7 @@ nodes:
     path: search_result_from_url.py
   inputs:
     url_list: ${get_wiki_url.output}
-    count: '10'
+    count: 10
 - name: process_search_result
   type: python
   source:
@@ -63,15 +62,13 @@ nodes:
     type: code
     path: augmented_chat.jinja2
   inputs:
-    # This is to easily switch between openai and azure openai.
-    # deployment_name is required by azure openai, model is required by openai.
-    deployment_name: gpt-35-turbo
+    deployment_name: gpt-4-32k
     model: gpt-3.5-turbo
-    temperature: '0.8'
+    temperature: 0.8
     question: ${inputs.question}
     chat_history: ${inputs.chat_history}
     contexts: ${process_search_result.output}
+    response_format:
+      type: text
   connection: open_ai_connection
   api: chat
-environment:
-    python_requirements_txt: requirements.txt
