--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -44,6 +44,7 @@ promptflow-core = "<2.0.0"
 aiohttp_retry = ">=2.8.3"
 websocket-client = ">=1.2.0"
 jsonpath_ng = ">=1.5.0"
+urllib3 = ">1.26.17"
 promptflow-azure = "<2.0.0" # Needed for remote tracking
 mlflow = "<3.0.0" # Needed for remote tracking to log metrics
 azureml-mlflow = "<2.0.0" # Needed for remote tracking to log metrics
