--- a/src/promptflow-azure/pyproject.toml
+++ b/src/promptflow-azure/pyproject.toml
@@ -65,6 +65,7 @@ promptflow-tracing = {path = "../promptflow-tracing"}
 promptflow = {path = "../promptflow"}
 promptflow-tools = {path = "../promptflow-tools"}
 promptflow-recording =  {path = "../promptflow-recording"}
+numpy = "<2.0.0"  # avoid pandas incompatibility
 
 [tool.poetry.group.test.dependencies]
 pytest = "*"
