[fundamental][bugfix] Pin `tenacity`<8.4.0 to fix import-linter CI (#3424)
# Description

Pin `tenacity` to avoid issue described in
https://github.com/langchain-ai/langchain/issues/22972.

# All Promptflow Contribution checklist:
- [x] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [x] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [x] Title of the pull request is clear and informative.
- [x] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [x] Pull request includes test coverage for the included changes.

--- a/.github/workflows/promptflow-import-linter.yml
+++ b/.github/workflows/promptflow-import-linter.yml
@@ -67,5 +67,5 @@ jobs:
 
         echo "=== promptflow-azure full lints ==="
         poetry run pip install langchain
+        poetry run pip install "tenacity<8.4.0"
         poetry run python ${{ github.workspace }}/scripts/import_linter/import_linter.py
-
