--- a/examples/flex-flows/chat-basic/flow.flex.yaml
+++ b/examples/flex-flows/chat-basic/flow.flex.yaml
@@ -6,7 +6,7 @@ sample:
   init: 
     model_config: 
       connection: open_ai_connection
-      azure_deployment: gpt-35-turbo
+      azure_deployment: gpt-4o
     max_total_token: 1024
 environment:
   # image: mcr.microsoft.com/azureml/promptflow/promptflow-python
