--- a/examples/flex-flows/chat-basic/run.yml
+++ b/examples/flex-flows/chat-basic/run.yml
@@ -4,6 +4,6 @@ data: data.jsonl
 init:
   model_config:
     connection: open_ai_connection
-    azure_deployment: gpt-35-turbo
+    azure_deployment: gpt-4o
 column_mapping:
   question: ${data.question}
