--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -45,8 +45,13 @@ aiohttp_retry = ">=2.8.3"
 websocket-client = ">=1.2.0"
 jsonpath_ng = ">=1.5.0"
 urllib3 = ">1.26.17"
-azure-ai-ml = ">=1.14.0,<2.0.0" # Needed for remote tracking
 numpy = ">=1.22"
+promptflow-azure = { version = "<2.0.0", optional = true} # Needed for remote tracking
+
+[tool.poetry.extras]
+azure = [
+    "promptflow-azure" 
+]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "*"
