--- a/src/promptflow-evals/tests/recordings/azure/test_builtin_evaluators_TestBuiltInEvaluators_test_individual_evaluator_service_based_not_supported.yaml
+++ b/src/promptflow-evals/tests/recordings/azure/test_builtin_evaluators_TestBuiltInEvaluators_test_individual_evaluator_service_based_not_supported.yaml
@@ -18,13 +18,13 @@ interactions:
     body:
       string: '{"id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000",
         "name": "00000", "type": "Microsoft.MachineLearningServices/workspaces", "location":
-        "eastus2", "tags": {}, "etag": null, "kind": "Default", "sku": {"name": "Basic",
-        "tier": "Basic"}, "properties": {"discoveryUrl": "https://eastus2.api.azureml.ms/discovery"}}'
+        "westus2", "tags": {}, "etag": null, "kind": "Default", "sku": {"name": "Basic",
+        "tier": "Basic"}, "properties": {"discoveryUrl": "https://westus2.api.azureml.ms/discovery"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '2816'
+      - '2874'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -40,8 +40,40 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.033'
+      - '0.022'
     status:
       code: 200
       message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      User-Agent:
+      - python-requests/2.32.3
+    method: GET
+    uri: https://westus2.api.azureml.ms/raisvc/v1.0/meta/version
+  response:
+    body:
+      string: unknown to cluster
+    headers:
+      connection:
+      - keep-alive
+      content-length:
+      - '18'
+      content-type:
+      - application/octet-stream
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      x-content-type-options:
+      - nosniff
+      x-request-time:
+      - '0.006'
+    status:
+      code: 530
+      message: <none>
 version: 1
