--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -38,6 +38,7 @@ steps:
     script: |
       if [ ! -f $(sourceLocation)/scripts/compliance-check/result.tsv ]; then
         echo "Creating empty result file, as this might be a fork repository."
+        mkdir -p $(sourceLocation)/scripts/compliance-check
         touch $(sourceLocation)/scripts/compliance-check/result.tsv
       fi
   displayName: 'Workaround for fork repository'
