--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -39,7 +39,10 @@ steps:
       if [ ! -f $(sourceLocation)/scripts/compliance-check/result.tsv ]; then
         echo "Creating empty result file, as this might be a fork repository."
         mkdir -p $(sourceLocation)/scripts/compliance-check
-        touch $(sourceLocation)/scripts/compliance-check/result.tsv
+        cd $(sourceLocation)/scripts/compliance-check
+        touch result.tsv
+        pwd
+        ls -l
       fi
   displayName: 'Workaround for fork repository'
 
