--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -32,7 +32,7 @@ steps:
     result: '$(sourceLocation)\scripts\compliance-check\result.tsv'
     optionsXCLASS: 'Geopolitical'
 
-- task: PowerShell@2
+- task: Bash@3
   inputs:
     targetType: inline
     script: |
