--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -32,21 +32,19 @@ steps:
     result: '$(sourceLocation)\scripts\compliance-check\result.tsv'
     optionsXCLASS: 'Geopolitical'
 
-- task: Bash@3
+- task: PowerShell@2
   inputs:
     targetType: inline
     script: |
-      if [ ! -f $(sourceLocation)/scripts/compliance-check/result.tsv ]; then
-        echo "Creating empty result file, as this might be a fork repository."
-        mkdir -p $(sourceLocation)/scripts/compliance-check
-        cd $(sourceLocation)/scripts/compliance-check
-        touch result.tsv
-        echo "<PoliCheckExclusions>" > result.tsv
-        echo "</PoliCheckExclusions>" >> result.tsv
-        pwd
-        ls -l
-        cat result.tsv
-      fi
+      if (-Not (Test-Path "$(sourceLocation)/scripts/compliance-check/result.tsv")) {
+        Write-Host "Creating empty result file, as this might be a fork repository."
+        New-Item -ItemType Directory -Force -Path "$(sourceLocation)/scripts/compliance-check"
+        Set-Location "$(sourceLocation)/scripts/compliance-check"
+        New-Item -ItemType File -Name "result.tsv" -Value "<PoliCheckExclusions>`r`n</PoliCheckExclusions>"
+        Get-Location
+        Get-ChildItem -Name
+        Get-Content "result.tsv"
+    }
   displayName: 'Workaround for fork repository'
 
 - task: PowerShell@2
