--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -40,7 +40,7 @@ steps:
         Write-Host "Creating empty result file, as this might be a fork repository."
         New-Item -ItemType Directory -Force -Path "$(sourceLocation)/scripts/compliance-check"
         Set-Location "$(sourceLocation)/scripts/compliance-check"
-        New-Item -ItemType File -Name "result.tsv" -Value "<PoliCheckExclusions>`r`n</PoliCheckExclusions>"
+        New-Item -ItemType File -Name "result.tsv"
       }
   displayName: 'Workaround for fork repository'
 
