--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -37,7 +37,8 @@ steps:
     targetType: inline
     script: |
       if (-Not (Test-Path "$(sourceLocation)/scripts/compliance-check/result.tsv")) {
-        Write-Host "Creating empty result file, as this might be a fork repository."
+        Write-Host "PoliCheck@2 (previous step) is not supported for forked GitHub repository, which will break the following step."
+        Write-Host "So as a workaround, this step will create an empty result.tsv file."
         New-Item -ItemType Directory -Force -Path "$(sourceLocation)/scripts/compliance-check"
         Set-Location "$(sourceLocation)/scripts/compliance-check"
         New-Item -ItemType File -Name "result.tsv"
