--- a/.github/workflows/promptflow-evals-unit-test.yml
+++ b/.github/workflows/promptflow-evals-unit-test.yml
@@ -66,15 +66,17 @@ jobs:
           export install_time=$(((`date +%s` - ${start_tm})/60))
           echo "The installation took ${install_time} minutes."
           echo "The time limit for installation is ${TIME_LIMIT}"
+          python ../../scripts/code_qa/report_to_app_insights.py --activity install_time_s --value $((`date +%s` - ${start_tm})) --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
           test ${install_time} -le $TIME_LIMIT || echo "::warning file=pyproject.toml,line=40,col=0::The installation took ${install_time} minutes, the limit is ${TIME_LIMIT}."
-          echo "Run ID: ${{ github.run_id }} Workflow: ${{ github.workflow }}"
-          python -c "import os; print(os.environ['github.run_id'])"
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: install recording
         run: poetry run pip install -e ../promptflow-recording
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: run unit tests
-        run: poetry run pytest -m unittest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml --cov-fail-under=63
+        run: |
+            poetry run pytest -m unittest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml --cov-fail-under=63
+            export cov_pct=grep "data-ratio" htmlcov/index.html | tail -n1 | sed -r 's/.*>([0-9]+%)<.*/\1/g'
+            python ../../scripts/code_qa/report_to_app_insights.py --activity test_coverage --value $cov_pct --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: upload coverage report
         uses: actions/upload-artifact@v4
